# 6502-emulator

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/echo/: echo.py
examples/echo/6502_code/src/: isr.s  main.s  mmio.inc  startup.s
examples/hello_world/: hello_world.py
examples/wozmon/: wozmon.py
examples/wozmon/6502_code/: Makefile  memory.cfg
examples/wozmon/6502_code/src/: main.s  startup.s  terminal.s
src/another6502/: __init__.py  cpu.py  peripherals.py
src/emulator/: cpu.py  memory.py  peripherals.py  utils.py
tests/: conftest.py
tests/integration/: test_programs.py
tests/unit/: __init__.py  test_cpu.py  test_memory.py
tests/unit/cpu/: __init__.py  test_address_resolution.py  test_binary_arithmetic.py  test_binary_logic.py  test_branching.py  test_control_instructions.py  test_flag_instructions.py  test_flags.py  test_interrupts.py  test_register_loading.py  test_register_storing.py  test_register_transfer.py  test_stack.py  test_system_instructions.py  test_unary_arithmetic.py
tests/unit/memory/: test_memory_block.py  test_memory_map.py  test_mmio.py
