[project]
name = "another6502"
version = "0.1"
description = "Python-based behavioral emulator of the NMOS 6502 microprocessor."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Florian Ehmann" }]
keywords = ["emulator", "6502", "retro"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://github.com/florianehmann/another6502"
Issues = "https://github.com/florianehmann/another6502/issues"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
    "G004",    # logging statement uses f-string
    "TD002",   # missing author in todo
    "TD003",   # missing issue link in todo
    "D105",    # missing docstring in magic methods
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "INP001",  # implicit namespace
]
"tests/*test_*.py" = [
    "ANN201",  # missing return type annotation
    "S101",    # use of assert in tests
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "twine>=6.2.0",
]

[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"
